# CaelumRex

./: .gitignore  .gitmodules  CMakeLists.txt  PROJECT_TREE.md  README.md  USAGE.md
CaelumRex/: CMakeLists.txt
CaelumRex/caelumrex/: CMakeLists.txt  CRPrecompiled.h  CaelumRex.h
CaelumRex/caelumrex/Core/: Application.cpp  Application.h  CMakeLists.txt  Core.h  EngineEvent.h  Entry.h  EntryApplication.h  FrameRate.h  Input.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  PlatformDetection.h  Timestep.h  Window.cpp  Window.h
CaelumRex/caelumrex/Debug/: CMakeLists.txt  Instrumentor.h
CaelumRex/caelumrex/Events/: ApplicationEvent.h  CMakeLists.txt  Event.h  KeyEvent.h  MouseEvent.h
CaelumRex/caelumrex/ImGui/: CMakeLists.txt  ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
CaelumRex/caelumrex/KeyBinding/: KeyCodes.h  MouseButtonCodes.h
CaelumRex/caelumrex/Renderer/: Buffer.cpp  Buffer.h  CMakeLists.txt  Camera.cpp  Camera.h  GraphicsContext.cpp  GraphicsContext.h  OrthographicCameraController.cpp  OrthographicCameraController.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  Renderer3D.cpp  Renderer3D.h  RendererAPI.cpp  RendererAPI.h  RendererContext.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
CaelumRex/caelumrex/include/: CMakeLists.txt
CaelumRex/caelumrex/include/Core/: Application.h  CMakeLists.txt  EntryApplication.h  LayerStack.h  Window.h
CaelumRex/caelumrex/include/Events/: CMakeLists.txt  KeyEvent.h
CaelumRex/caelumrex/include/ImGui/: CMakeLists.txt  ImGuiLayer.h
CaelumRex/caelumrex/src/: CMakeLists.txt
CaelumRex/caelumrex/src/Core/: Application.cpp  CMakeLists.txt  Layer.cpp  Log.cpp
CaelumRex/caelumrex/src/ImGui/: CMakeLists.txt
CaelumRex/platform/: CMakeLists.txt
CaelumRex/platform/Linux/: CMakeLists.txt  LinuxInput.cpp  LinuxInput.h  LinuxWindow.cpp  LinuxWindow.h
CaelumRex/platform/OpenGL/: CMakeLists.txt  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
CaelumRex/platform/include/: CMakeLists.txt
CaelumRex/platform/include/Linux/: CMakeLists.txt  LinuxWindow.h
CaelumRex/platform/include/OpenGL/: CMakeLists.txt
CaelumRex/platform/src/: CMakeLists.txt
CaelumRex/platform/src/Linux/: CMakeLists.txt  LinuxWindow.cpp
CaelumRex/platform/src/OpenGL/: CMakeLists.txt  imgui_impl_opengl3.cpp
Examples/: SandboxApplication.cpp
Sandbox/: CMakeLists.txt  Sandbox2D.cpp  Sandbox2D.h  SandboxApplication.cpp
Sandbox/assets/shaders/: BasicColorShader.glsl  BasicShader.glsl  CMakeLists.txt  FlatColorShader.glsl  TextureShader.glsl
Sandbox/assets/textures/: CMakeLists.txt
